2011-05-19  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-ptile.c: Finalize OTL computation.

	* bin/pocc-util.in: Fix typo in synchronization website.

2011-05-18  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-ptile.c: Attempt to compute better OTL
	loop bounds (still unsafe).

2011-05-18  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-ptile.c: Fix a bug in OTL iterator naming,
	improve the mechanism.

	* driver/pocc/driver-clastops.c: Fix a bug in the newly created
	iterator declaration.

	* driver/src/options.c: Activate --use-past when --ptile is on.

2011-05-18  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-ptile.c,
	* driver/pocc/driver-clastops.c,
	* driver/pocc/Makefile.am,
	* driver/src/Makefile.am,
	* config/devel/configure.cfg,
	* config/devel/driver.cfg: Propagate name change from 'primetile'
	to 'ptile'.

	* bin/pocc-util.in: Fix a typo in the 'upgrade' command.

2011-05-18  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-ptile.c: Update to benefit from PAST latest
	API functionalities.

2011-05-18  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-ptile.c: Use existing loop iterator for otl
	loops.

	* driver/pocc/driver-clastops.c: Automatically compute the
	declaration of loop iterators;

2011-05-17  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-ptile.c: Fix a bug with OTL recomputation.

2011-05-17  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/include/pocc/driver-ptile.h,
	* driver/pocc/driver-ptile.c: New. Driver for the PTile phase.
	* driver/pocc/Makefile.am: Update accordingly.

	* driver/pocc/driver-clastops.c: Move the PTile related code to
	driver-ptile.

	* config/devel/configure.cfg,
	* config/base/configure.cfg,
	* config/local/configure.cfg,
	* config/stable/configure.cfg: Configure scoptools with PAST.
